--- a/Hello/templates/index.html
+++ b/Hello/templates/index.html
@@ -10,7 +10,7 @@
         
     </head>
     <body>
-        <h1>LEARNING DJANGO</h1>
+        <h1>LEARNING DJANGO...</h1>
         <p>I am making the website</p>
         <p> {{ variable1 }}</p>
         <p> {{ variable2 }}</p>
