--- a/Hello/templates/services.html
+++ b/Hello/templates/services.html
@@ -1,3 +1,5 @@
 {% extends "base.html" %}
 {% block title %}Services{% endblock title %}
-{% block body %}This is Services Body{% endblock body %}
+
+{% block body %}
+{% endblock body %}
