--- a/Hello/templates/about.html
+++ b/Hello/templates/about.html
@@ -1,3 +1,5 @@
 {% extends "base.html" %}
 {% block title %}About{% endblock title %}
-{% block body %}This is About Body{% endblock body %}
+
+{% block body %}
+{% endblock body %}
