--- a/Hello/templates/contact.html
+++ b/Hello/templates/contact.html
@@ -1,3 +1,5 @@
 {% extends "base.html" %}
 {% block title %}Contact{% endblock title %}
-{% block body %}This is Contact body{% endblock body %}
+
+{% block body %}
+{% endblock body %}
