--- a/Hello/templates/index.html
+++ b/Hello/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Home{% endblock title %}
 
 {% block body %}
-<div class="container  my-4" >
+<div class="container-fluid  my-4" >
     <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
