--- a/Hello/templates/base.html
+++ b/Hello/templates/base.html
@@ -13,7 +13,14 @@
   <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Olive Edge</a>
+  <a class="navbar-brand d-flex align-items-center" href="#">
+  <img src="/static/img/logo.png" 
+       alt="Logo" 
+       width="60" 
+       height="50" 
+       class="d-inline-block align-text-top rounded-circle m-2">
+  <span class="fst-italic text-white">Olive Edge</span>
+  </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
