--- a/Hello/templates/index.html
+++ b/Hello/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Home{% endblock title %}
 
 {% block body %}
-<div class="container-fluid  my-4" >
+<div class="container-fluid  my-4 px-0" >
     <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -12,12 +12,24 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="/static/img/c1.png" height ="600px"class="d-block w-100" alt="...">
+      <div class="carousel-caption ">
+            <h1><i style="background: black; border-radius:63px;padding-right:30px;padding-left:30px;">Welcome to Olive Edge</i></h1>
+            <p style = "background:darkolivegreen;border-radius:63px;">Olive Edge - Designed for the Brave, Styled For you</p>
+      </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item ">
       <img src="/static/img/c2.png" height ="600px" class="d-block w-100" alt="...">
+      <div class="carousel-caption ">
+            <h1><i style="background: black; border-radius:63px;padding-right:30px;padding-left:30px;">Lead with style. March with pride.</i></h1>
+            <p style = "background:darkolivegreen;border-radius:63px;">Quality that speaks for itself</p>
+      </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item ">
       <img src="/static/img/c3.jpg" height ="600px"  class="d-block w-100" alt="...">
+      <div class="carousel-caption ">
+            <h1><i style="background: black; border-radius:63px;padding-right:30px;padding-left:30px;">Be Bold. Be Brave. Be Olive.</i></h1>
+            <p style = "background:darkolivegreen;border-radius:63px;">A glimpse of elegance and comfort in every piece</p>
+      </div>
     </div>
     
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
