--- a/Hello/templates/index.html
+++ b/Hello/templates/index.html
@@ -1,46 +1,378 @@
-{% extends "base.html" %}
+{% extends "base.html" %} 
 {% block title %}Home{% endblock title %}
-
 {% block body %}
-<div class="container-fluid  my-4 px-0" >
-    <div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="/static/img/c1.png" height ="600px"class="d-block w-100" alt="...">
-      <div class="carousel-caption ">
-            <h1><i style="background: black; border-radius:63px;padding-right:30px;padding-left:30px;">Welcome to Olive Edge</i></h1>
-            <p style = "background:darkolivegreen;border-radius:63px;">Olive Edge - Designed for the Brave, Styled For you</p>
-      </div>
+<div class="container-fluid my-4 px-0">
+  <div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+      <button
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide-to="0"
+        class="active"
+        aria-current="true"
+        aria-label="Slide 1"
+      ></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide-to="1"
+        aria-label="Slide 2"
+      ></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide-to="2"
+        aria-label="Slide 3"
+      ></button>
     </div>
-    <div class="carousel-item ">
-      <img src="/static/img/c2.png" height ="600px" class="d-block w-100" alt="...">
-      <div class="carousel-caption ">
-            <h1><i style="background: black; border-radius:63px;padding-right:30px;padding-left:30px;">Lead with style. March with pride.</i></h1>
-            <p style = "background:darkolivegreen;border-radius:63px;">Quality that speaks for itself</p>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img
+          src="/static/img/c1.png"
+          height="600px"
+          class="d-block w-100"
+          alt="..."
+        />
+        <div class="carousel-caption">
+          <h1>
+            <i
+              style="
+                background: black;
+                border-radius: 63px;
+                padding-right: 30px;
+                padding-left: 30px;
+              "
+              >Welcome to Olive Edge</i
+            >
+          </h1>
+          <p style="background: darkolivegreen; border-radius: 63px">
+            Olive Edge - Designed for the Brave, Styled For you
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="carousel-item ">
-      <img src="/static/img/c3.jpg" height ="600px"  class="d-block w-100" alt="...">
-      <div class="carousel-caption ">
-            <h1><i style="background: black; border-radius:63px;padding-right:30px;padding-left:30px;">Be Bold. Be Brave. Be Olive.</i></h1>
-            <p style = "background:darkolivegreen;border-radius:63px;">A glimpse of elegance and comfort in every piece</p>
+      <div class="carousel-item">
+        <img
+          src="/static/img/c2.png"
+          height="600px"
+          class="d-block w-100"
+          alt="..."
+        />
+        <div class="carousel-caption">
+          <h1>
+            <i
+              style="
+                background: black;
+                border-radius: 63px;
+                padding-right: 30px;
+                padding-left: 30px;
+              "
+              >Lead with style. March with pride.</i
+            >
+          </h1>
+          <p style="background: darkolivegreen; border-radius: 63px">
+            Quality that speaks for itself
+          </p>
+        </div>
       </div>
-    </div>
-    
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+      <div class="carousel-item">
+        <img
+          src="/static/img/c3.jpg"
+          height="600px"
+          class="d-block w-100"
+          alt="..."
+        />
+        <div class="carousel-caption">
+          <h1>
+            <i
+              style="
+                background: black;
+                border-radius: 63px;
+                padding-right: 30px;
+                padding-left: 30px;
+              "
+              >Be Bold. Be Brave. Be Olive.</i
+            >
+          </h1>
+          <p style="background: darkolivegreen; border-radius: 63px">
+            A glimpse of elegance and comfort in every piece
+          </p>
+        </div>
+      </div>
 
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
 </div>
+  {% comment %}-------------------Thumbnail------------------------- {% endcomment %}
+
+    <div class="container my-4">
+      <h1 class="my-3 text-center">Discover Our Latest Fashion Collection</h1>
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg
+              aria-label="Placeholder: Thumbnail"
+              class="bd-placeholder-img card-img-top"
+              height="225"
+              preserveAspectRatio="xMidYMid slice"
+              role="img"
+              width="100%"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#55595c"></rect>
+              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+            </svg>
+            <div class="card-body">
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    View
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    Edit
+                  </button>
+                </div>
+                <small class="text-body-secondary">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg
+              aria-label="Placeholder: Thumbnail"
+              class="bd-placeholder-img card-img-top"
+              height="225"
+              preserveAspectRatio="xMidYMid slice"
+              role="img"
+              width="100%"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#55595c"></rect>
+              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+            </svg>
+            <div class="card-body">
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    View
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    Edit
+                  </button>
+                </div>
+                <small class="text-body-secondary">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg
+              aria-label="Placeholder: Thumbnail"
+              class="bd-placeholder-img card-img-top"
+              height="225"
+              preserveAspectRatio="xMidYMid slice"
+              role="img"
+              width="100%"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#55595c"></rect>
+              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+            </svg>
+            <div class="card-body">
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    View
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    Edit
+                  </button>
+                </div>
+                <small class="text-body-secondary">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg
+              aria-label="Placeholder: Thumbnail"
+              class="bd-placeholder-img card-img-top"
+              height="225"
+              preserveAspectRatio="xMidYMid slice"
+              role="img"
+              width="100%"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#55595c"></rect>
+              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+            </svg>
+            <div class="card-body">
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    View
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    Edit
+                  </button>
+                </div>
+                <small class="text-body-secondary">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg
+              aria-label="Placeholder: Thumbnail"
+              class="bd-placeholder-img card-img-top"
+              height="225"
+              preserveAspectRatio="xMidYMid slice"
+              role="img"
+              width="100%"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#55595c"></rect>
+              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+            </svg>
+            <div class="card-body">
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    View
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    Edit
+                  </button>
+                </div>
+                <small class="text-body-secondary">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div class="col">
+          <div class="card shadow-sm">
+            <svg
+              aria-label="Placeholder: Thumbnail"
+              class="bd-placeholder-img card-img-top"
+              height="225"
+              preserveAspectRatio="xMidYMid slice"
+              role="img"
+              width="100%"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#55595c"></rect>
+              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+            </svg>
+            <div class="card-body">
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    View
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                  >
+                    Edit
+                  </button>
+                </div>
+                <small class="text-body-secondary">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock body %}
+
