--- a/Hello/templates/base.html
+++ b/Hello/templates/base.html
@@ -11,7 +11,7 @@
     <title>{% block title %}{% endblock title %}  | Olive Edge</title>
   </head>
   <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fs-5">
   <div class="container-fluid">
   <a class="navbar-brand d-flex align-items-center" href="#">
   <img src="/static/img/logo.png" 
