--- a/Hello/templates/index.html
+++ b/Hello/templates/index.html
@@ -127,19 +127,14 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <svg
-              aria-label="Placeholder: Thumbnail"
-              class="bd-placeholder-img card-img-top"
-              height="225"
-              preserveAspectRatio="xMidYMid slice"
-              role="img"
-              width="100%"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
+            <img
+                 src="/static/img/1.png"
+                 height="350px"
+                 width="85%"
+                 class="d-block mx-auto"
+                 alt="..."
+                  />
+           
             <div class="card-body">
               <p class="card-text">
                 This is a wider card with supporting text below as a natural
@@ -168,19 +163,14 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg
-              aria-label="Placeholder: Thumbnail"
-              class="bd-placeholder-img card-img-top"
-              height="225"
-              preserveAspectRatio="xMidYMid slice"
-              role="img"
-              width="100%"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
+            <img
+                 src="/static/img/1.png"
+                 height="350px"
+                 width="85%"
+                 class="d-block mx-auto"
+                 alt="..."
+                  />
+            
             <div class="card-body">
               <p class="card-text">
                 This is a wider card with supporting text below as a natural
@@ -209,19 +199,14 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg
-              aria-label="Placeholder: Thumbnail"
-              class="bd-placeholder-img card-img-top"
-              height="225"
-              preserveAspectRatio="xMidYMid slice"
-              role="img"
-              width="100%"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
+            <img
+                 src="/static/img/1.png"
+                 height="350px"
+                 width="85%"
+                 class="d-block mx-auto"
+                 alt="..."
+                  />
+           
             <div class="card-body">
               <p class="card-text">
                 This is a wider card with supporting text below as a natural
@@ -250,19 +235,14 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg
-              aria-label="Placeholder: Thumbnail"
-              class="bd-placeholder-img card-img-top"
-              height="225"
-              preserveAspectRatio="xMidYMid slice"
-              role="img"
-              width="100%"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
+            <img
+                 src="/static/img/1.png"
+                 height="350px"
+                 width="85%"
+                 class="d-block mx-auto"
+                 alt="..."
+                  />
+            
             <div class="card-body">
               <p class="card-text">
                 This is a wider card with supporting text below as a natural
@@ -291,19 +271,14 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg
-              aria-label="Placeholder: Thumbnail"
-              class="bd-placeholder-img card-img-top"
-              height="225"
-              preserveAspectRatio="xMidYMid slice"
-              role="img"
-              width="100%"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
+            <img
+                 src="/static/img/1.png"
+                 height="350px"
+                 width="85%"
+                 class="d-block mx-auto"
+                 alt="..."
+                  />
+           
             <div class="card-body">
               <p class="card-text">
                 This is a wider card with supporting text below as a natural
@@ -332,19 +307,15 @@
         </div>
           <div class="col">
           <div class="card shadow-sm">
-            <svg
-              aria-label="Placeholder: Thumbnail"
-              class="bd-placeholder-img card-img-top"
-              height="225"
-              preserveAspectRatio="xMidYMid slice"
-              role="img"
-              width="100%"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
+                 <img
+                 src="/static/img/1.png"
+                 height="350px"
+                 width="85%"
+                 class="d-block mx-auto"
+                 alt="..."
+                  />
+
+            
             <div class="card-body">
               <p class="card-text">
                 This is a wider card with supporting text below as a natural
