--- a/Hello/templates/base.html
+++ b/Hello/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.rtl.min.css" integrity="sha384-CfCrinSRH2IR6a4e6fy2q6ioOX7O6Mtm1L9vRvFZ1trBncWmMePhzvafv7oIcWiW" crossorigin="anonymous">
 
-    <title>{% block title %}{% endblock title %}  | Olive Edge</title>
+    <title>{% block title %}{% endblock title %} | Olive Edge</title>
   </head>
   <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fs-5">
@@ -50,7 +50,8 @@
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        
+        <button class="btn btn-outline-success me-3" type="submit">Search</button>
       </form>
     </div>
   </div>
