--- a/Hello/templates/contact.html
+++ b/Hello/templates/contact.html
@@ -2,4 +2,13 @@
 {% block title %}Contact{% endblock title %}
 
 {% block body %}
+<div class="container-fluid px-0">
+    <img
+          src="/static/img/contact.png"
+          height="600px"
+          class="d-block w-100 mx-0"
+          alt="..."
+        />
+        <h1>Contact Us</h1>
+</div>
 {% endblock body %}
