--- a/Hello/templates/contact.html
+++ b/Hello/templates/contact.html
@@ -5,10 +5,10 @@
 <div class="container-fluid px-0">
     <img
           src="/static/img/contact.png"
-          height="600px"
+          height="400px"
           class="d-block w-100 mx-0"
           alt="..."
         />
-        <h1>Contact Us</h1>
+        <h1 class="text-center">Contact Us</h1>
 </div>
 {% endblock body %}
