--- a/Hello/templates/contact.html
+++ b/Hello/templates/contact.html
@@ -3,12 +3,30 @@
 
 {% block body %}
 <div class="container-fluid px-0">
-    <img
-          src="/static/img/contact.png"
-          height="400px"
-          class="d-block w-100 mx-0"
-          alt="..."
-        />
+    <img src="/static/img/contact.png" height="400px" class="d-block w-100 mx-0"alt="..."/>
+</div>
+<div class="container">    
         <h1 class="text-center">Contact Us</h1>
+        <form>
+        <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" name="name" placeholder="Enter your Name">
+        </div>
+
+        <div class="mb-3">
+        <label for="email" class="form-label">Email Address</label>
+        <input type="email" class="form-control" id="name" name="email" placeholder="Enter your Email">
+        </div>
+
+        <div class="mb-3">
+        <label for="phone" class="form-label">Phone Number</label>
+        <input type="phone" class="form-control" id="phone" name="phone" placeholder="Enter your Phone Number">
+        </div>
+
+        <div class="mb-3">
+        <label for="desc" class="form-label">Provide your Valuable Feedback</label>
+        <textarea class="form-control" id="desc" name="desc"rows="3"></textarea>
+        </div>
+        </form>
 </div>
 {% endblock body %}
