--- a/Hello/templates/contact.html
+++ b/Hello/templates/contact.html
@@ -2,12 +2,13 @@
 {% block title %}Contact{% endblock title %}
 
 {% block body %}
-<div class="container-fluid px-0">
+<div class="container-fluid px-0 mb-3">
     <img src="/static/img/contact.png" height="400px" class="d-block w-100 mx-0"alt="..."/>
 </div>
-<div class="container">    
+<div class="container mb-3 py-4">    
         <h1 class="text-center">Contact Us</h1>
-        <form>
+        <form method="post" actions="/contact">
+        {% csrf_token %}
         <div class="mb-3">
         <label for="name" class="form-label">Name</label>
         <input type="text" class="form-control" id="name" name="name" placeholder="Enter your Name">
@@ -26,6 +27,9 @@
         <div class="mb-3">
         <label for="desc" class="form-label">Provide your Valuable Feedback</label>
         <textarea class="form-control" id="desc" name="desc"rows="3"></textarea>
+        </div>
+        <div class="d-flex justify-content-center">
+              <button type="button" class="btn btn-dark">Submit</button>
         </div>
         </form>
 </div>
