--- a/Hello/templates/base.html
+++ b/Hello/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/css/about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="/static/css/contact.css">
 
     <title>{% block title %}{% endblock title %} | Olive Edge</title>
   </head>
